--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		<h2>Pirates of the Caribbean / 28 Trombones</h2>
 		<h4>333,222 views</h4>
 	</div>
+	<div class="sidebar">
+		<iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+		<iframe width="250" height="200" src="https://www.youtube.com/embed/gOtTyWIJD1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+		<iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+		<iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+		</div>
 	
 </body>
 </html>
