--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 		<h4>333,222 views</h4>
 	</div>
 	<div class="sidebar">
-		<iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
-		<iframe width="250" height="200" src="https://www.youtube.com/embed/gOtTyWIJD1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
-		<iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
-		<iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+		<ul>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/gOtTyWIJD1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+		</ul>
 		</div>
 	
 </body>
