--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	</div>
 	<div class="sidebar">
 		<ul>
-		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
-		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/gOtTyWIJD1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
-		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
-		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>MANOWAR - Warriors Of The World United (Live)</li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/r-Se2fjTSAg?list=RD0_T0jgHd9d0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>U.D.O. - I Give As Good As I Get </li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Metallica - Nothing else Matters </li>
+		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Guns N' Roses - November Rain (Official Music Video)</li>
 		</ul>
 		</div>
 	
