--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<h2>Pirates of the Caribbean / 28 Trombones</h2>
 		<h4>333,222 views</h4>
 	</div>
+	<div class="layout>
 	<div id="sidebar">
 		<ul>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>MANOWAR - Warriors Of The World United (Live)</li>
@@ -39,6 +40,7 @@
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Metallica - Nothing else Matters </li>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Guns N' Roses - November Rain (Official Music Video)</li>
 		</ul>
+		</div>
 		</div>
 
 </body>
