--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<h4>333,222 views</h4>
 	</div>
 	<div class="layout>
-	<div id="sidebar">
+	<div  class="sidebar">
 		<ul>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>MANOWAR - Warriors Of The World United (Live)</li>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/r-Se2fjTSAg?list=RD0_T0jgHd9d0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>U.D.O. - I Give As Good As I Get </li>
