--- a/index.html
+++ b/index.html
@@ -26,22 +26,23 @@
 
 
 		<div id="video">
-          <iframe id="howWork" width="554" height="312" src="https://www.youtube.com/embed/LG_YYN2m-2U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe id="howWork" width="1300" height="550" src="https://www.youtube.com/embed/LG_YYN2m-2U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 	<div>
 		<h2>Pirates of the Caribbean / 28 Trombones</h2>
 		<h4>333,222 views</h4>
 	</div>
-	<div class="layout>
-	<div  class="sidebar">
+  <div class="layout">
+    <div class ="sidebar"></div>
+      <div class="content"></div>
+
 		<ul>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/G1G9D8A4Fiw?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>MANOWAR - Warriors Of The World United (Live)</li>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/r-Se2fjTSAg?list=RD0_T0jgHd9d0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>U.D.O. - I Give As Good As I Get </li>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/cbV190MjKiU?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Metallica - Nothing else Matters </li>
 		<li><iframe width="250" height="200" src="https://www.youtube.com/embed/8SbUC-UaAxE?list=RDG1G9D8A4Fiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>Guns N' Roses - November Rain (Official Music Video)</li>
 		</ul>
-		</div>
-		</div>
+</div>
 
 </body>
 </html>
