--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Project: Embedding Images and Video</title>
+    <title>repl.it</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
@@ -23,8 +23,6 @@
             <input type="text" class="bar-item" placeholder="Search.."><button class="bar-item">Go</button>
           </form>
         </div>
-
-
           </nav>
 
   <div id="container">
